替代文字檢查完成

--- a/distribution-confirm.html
+++ b/distribution-confirm.html
@@ -268,11 +268,11 @@
                                 </div>
                                 <!----------------------------- 社群連結 ------------------------------------>
                                 <div class="social-menu-icon">
-                                    <a href="" title="老虎堂FB">
+                                    <a href="https://www.facebook.com/twtigersugar/" title="老虎堂FB">
                                         <img class="social-menu-icon-fb" src="./frontend-img/header-img/fb.png"
                                             alt="icon-fb">
                                     </a>
-                                    <a href="" title="老虎堂IG">
+                                    <a href="https://www.instagram.com/twtigersugar/" title="老虎堂IG">
                                         <img class="social-menu-icon-ig" src="./frontend-img/header-img/ig.png"
                                             alt="social-menu-icon-ig">
                                     </a>
@@ -315,7 +315,6 @@
                 <div class="container">
                     <div class="title-area">
                         <div class="tiger-sugar-img-area">
-                            <img src="./frontend-img/" alt="">
                             <img class="tiger-sugar-img" src="./frontend-img/distribution-confirm-img/join_us.png"
                                 alt="老虎堂logo">
                         </div>
@@ -654,16 +653,16 @@
                         <div thumbsSlider="" class="swiper-pop-top swiper my-pop-swiper">
                             <div class="swiper-wrapper display-vertical">
                                 <div class="swiper-pop-top-slide swiper-slide">
-                                    <img src="./frontend-img/distribution-confirm-img/sesamebun1.jpeg" />
+                                    <img src="./frontend-img/distribution-confirm-img/sesamebun1.jpeg" alt="產品圖片1"/>
                                 </div>
                                 <div class="swiper-slide swiper-pop-top-slide">
-                                    <img src="./frontend-img/distribution-confirm-img/sesamebun2.jpeg" />
+                                    <img src="./frontend-img/distribution-confirm-img/sesamebun2.jpeg" alt="產品圖片2"/>
                                 </div>
                                 <div class="swiper-slide swiper-pop-top-slide">
-                                    <img src="./frontend-img/distribution-confirm-img/sesamebun3.jpeg" />
+                                    <img src="./frontend-img/distribution-confirm-img/sesamebun3.jpeg" alt="產品圖片3"/>
                                 </div>
                                 <div class="swiper-slide swiper-pop-top-slide">
-                                    <img src="./frontend-img/distribution-confirm-img/sesamebun4.jpeg" />
+                                    <img src="./frontend-img/distribution-confirm-img/sesamebun4.jpeg" alt="產品圖片4"/>
                                 </div>
                             </div>
                         </div>
@@ -673,35 +672,35 @@
                                 <div class="swiper-slide swiper-pop-top-slide">
                                     <div class="pop-sub-border-img">
                                         <img class="sub-img"
-                                            src="./frontend-img/distribution-confirm-img/sesamebun1.jpeg" />
+                                            src="./frontend-img/distribution-confirm-img/sesamebun1.jpeg" alt="產品圖片1"/>
                                     </div>
                                 </div>
                                 <div class="swiper-slide swiper-pop-top-slide">
                                     <div class="pop-sub-border-img">
                                         <img class="sub-img"
-                                            src="./frontend-img/distribution-confirm-img/sesamebun2.jpeg" />
+                                            src="./frontend-img/distribution-confirm-img/sesamebun2.jpeg" alt="產品圖片2"/>
                                     </div>
                                 </div>
                                 <div class="swiper-slide swiper-pop-top-slide">
                                     <div class="pop-sub-border-img">
                                         <img class="sub-img"
-                                            src="./frontend-img/distribution-confirm-img/sesamebun3.jpeg" />
+                                            src="./frontend-img/distribution-confirm-img/sesamebun3.jpeg" alt="產品圖片3"/>
                                     </div>
                                 </div>
                                 <div class="swiper-slide swiper-pop-top-slide">
                                     <div class="pop-sub-border-img">
                                         <img class="sub-img"
-                                            src="./frontend-img/distribution-confirm-img/sesamebun4.jpeg" />
+                                            src="./frontend-img/distribution-confirm-img/sesamebun4.jpeg" alt="產品圖片4"/>
                                     </div>
                                 </div>
                             </div>
                             <div class="swiper-button-next">
                                 <img class="next-prev-img"
-                                    src="./frontend-img/distribution-confirm-img/commodity-next.svg" alt="">
+                                    src="./frontend-img/distribution-confirm-img/commodity-next.svg" alt="下一張圖片">
                             </div>
                             <div class="swiper-button-prev">
                                 <img class="next-prev-img"
-                                    src="./frontend-img/distribution-confirm-img/commodity-prev.svg" alt="">
+                                    src="./frontend-img/distribution-confirm-img/commodity-prev.svg" alt="上一張圖片">
                             </div>
                             <div class="swiper-pagination swiper-page-dec"></div>
                         </div>
@@ -787,15 +786,15 @@
                                             <div class="img-box-border-img">
                                                 <img class="product-img"
                                                     src="./frontend-img/distribution-confirm-img/1668998205a2557a7b2e94197ff767970b67041697.jpg"
-                                                    alt="">
+                                                    alt="商品圖片">
                                                 <img class="ask-icon"
                                                     src="./frontend-img/distribution-confirm-img/add_for_ask.svg"
-                                                    alt="">
+                                                    alt="加入購物車">
                                                 <div class="product-img-hover">
                                                     <img class="ask-icon-hover"
                                                         src="./frontend-img/distribution-confirm-img/add_for_ask_hover.svg"
-                                                        alt="">
-                                                    <a href="" class="commodity-more-button btn">
+                                                        alt="加入購物車">
+                                                    <a href="" class="commodity-more-button btn" title="更多商品">
                                                         MORE
                                                     </a>
                                                 </div>
@@ -816,15 +815,15 @@
                                             <div class="img-box-border-img">
                                                 <img class="product-img"
                                                     src="./frontend-img/distribution-confirm-img/165899031442a0e188f5033bc65bf8d78622277c4e.jpg"
-                                                    alt="">
+                                                    alt="商品圖片">
                                                 <img class="ask-icon"
                                                     src="./frontend-img/distribution-confirm-img/add_for_ask.svg"
-                                                    alt="">
+                                                    alt="加入購物車">
                                                 <div class="product-img-hover">
                                                     <img class="ask-icon-hover"
                                                         src="./frontend-img/distribution-confirm-img/add_for_ask_hover.svg"
-                                                        alt="">
-                                                    <a href="" class="commodity-more-button btn">
+                                                        alt="加入購物車">
+                                                    <a href="" class="commodity-more-button btn" title="更多商品">
                                                         MORE
                                                     </a>
                                                 </div>
@@ -845,15 +844,15 @@
                                             <div class="img-box-border-img">
                                                 <img class="product-img"
                                                     src="./frontend-img/distribution-confirm-img/165899100742a0e188f5033bc65bf8d78622277c4e.jpg"
-                                                    alt="">
+                                                    alt="商品圖片">
                                                 <img class="ask-icon"
                                                     src="./frontend-img/distribution-confirm-img/add_for_ask.svg"
-                                                    alt="">
+                                                    alt="加入購物車">
                                                 <div class="product-img-hover">
                                                     <img class="ask-icon-hover"
                                                         src="./frontend-img/distribution-confirm-img/add_for_ask_hover.svg"
-                                                        alt="">
-                                                    <a href="" class="commodity-more-button btn">
+                                                        alt="加入購物車">
+                                                    <a href="" class="commodity-more-button btn" title="更多商品">
                                                         MORE
                                                     </a>
                                                 </div>
@@ -874,15 +873,15 @@
                                             <div class="img-box-border-img">
                                                 <img class="product-img"
                                                     src="./frontend-img/distribution-confirm-img/1658908734cfecdb276f634854f3ef915e2e980c31.jpg"
-                                                    alt="">
+                                                    alt="商品圖片">
                                                 <img class="ask-icon"
                                                     src="./frontend-img/distribution-confirm-img/add_for_ask.svg"
-                                                    alt="">
+                                                    alt="加入購物車">
                                                 <div class="product-img-hover">
                                                     <img class="ask-icon-hover"
                                                         src="./frontend-img/distribution-confirm-img/add_for_ask_hover.svg"
-                                                        alt="">
-                                                    <a href="" class="commodity-more-button btn">
+                                                        alt="加入購物車">
+                                                    <a href="" class="commodity-more-button btn" title="更多商品">
                                                         MORE
                                                     </a>
                                                 </div>
@@ -903,15 +902,15 @@
                                             <div class="img-box-border-img">
                                                 <img class="product-img"
                                                     src="./frontend-img/distribution-confirm-img/16589912415878a7ab84fb43402106c575658472fa.jpg"
-                                                    alt="">
+                                                    alt="商品圖片">
                                                 <img class="ask-icon"
                                                     src="./frontend-img/distribution-confirm-img/add_for_ask.svg"
-                                                    alt="">
+                                                    alt="加入購物車">
                                                 <div class="product-img-hover">
                                                     <img class="ask-icon-hover"
                                                         src="./frontend-img/distribution-confirm-img/add_for_ask_hover.svg"
-                                                        alt="">
-                                                    <a href="" class="commodity-more-button btn">
+                                                        alt="加入購物車">
+                                                    <a href="" class="commodity-more-button btn" title="更多商品">
                                                         MORE
                                                     </a>
                                                 </div>
@@ -932,15 +931,15 @@
                                             <div class="img-box-border-img">
                                                 <img class="product-img"
                                                     src="./frontend-img/distribution-confirm-img/16508571967e7757b1e12abcb736ab9a754ffb617a.jpg"
-                                                    alt="">
+                                                    alt="商品圖片">
                                                 <img class="ask-icon"
                                                     src="./frontend-img/distribution-confirm-img/add_for_ask.svg"
-                                                    alt="">
+                                                    alt="加入購物車">
                                                 <div class="product-img-hover">
                                                     <img class="ask-icon-hover"
                                                         src="./frontend-img/distribution-confirm-img/add_for_ask_hover.svg"
-                                                        alt="">
-                                                    <a href="" class="commodity-more-button btn">
+                                                        alt="加入購物車">
+                                                    <a href="" class="commodity-more-button btn" title="更多商品">
                                                         MORE
                                                     </a>
                                                 </div>
@@ -961,11 +960,11 @@
                             <div class="swiper-button-product">
                                 <div class="swiper-button-next">
                                     <img class="next-prev-img"
-                                        src="./frontend-img/distribution-confirm-img/commodity-next.svg" alt="">
+                                        src="./frontend-img/distribution-confirm-img/commodity-next.svg" alt="下一張圖片">
                                 </div>
                                 <div class="swiper-button-prev">
                                     <img class="next-prev-img"
-                                        src="./frontend-img/distribution-confirm-img/commodity-prev.svg" alt="">
+                                        src="./frontend-img/distribution-confirm-img/commodity-prev.svg" alt="上一張圖片">
                                 </div>
                             </div>
                         </div>
