--- a/distribution.html
+++ b/distribution.html
@@ -269,11 +269,11 @@
                                 </div>
                                 <!----------------------------- 社群連結 ------------------------------------>
                                 <div class="social-menu-icon">
-                                    <a href="" title="老虎堂FB">
+                                    <a href="https://www.facebook.com/twtigersugar/" title="老虎堂FB">
                                         <img class="social-menu-icon-fb" src="./frontend-img/header-img/fb.png"
                                             alt="icon-fb">
                                     </a>
-                                    <a href="" title="老虎堂IG">
+                                    <a href="https://www.instagram.com/twtigersugar/" title="老虎堂IG">
                                         <img class="social-menu-icon-ig" src="./frontend-img/header-img/ig.png"
                                             alt="social-menu-icon-ig">
                                     </a>
@@ -385,7 +385,7 @@
                                         alt="黃色詢問框" />
                                 </div>
                                 <div class="product-background-hover open-pop-window" id="">
-                                    <a href="" class="yellow-box-hover"><img
+                                    <a href="" class="yellow-box-hover" title="更多商品"><img
                                             src="./frontend-img/distribution-img/distribution/add_for_ask_hover.svg"
                                             alt="黃色詢問框hover" /></a>
                                     <button class="product-background-hover-more">MORE</button>
@@ -654,7 +654,7 @@
             </div>
             <div class="franchisee-container-big">
                 <div class="franchisee-container-animation" data-aos="zoom-in">
-                    <a href="./franchisee-form.html" class="franchisee-link">
+                    <a href="./franchisee-form.html" class="franchisee-link" title="前往加盟表單頁">
                         <div class="join-us-img">
                             <div class="join-us-info">
                                 <h2>
@@ -697,16 +697,16 @@
                         <div thumbsSlider="" class="swiper-pop-top swiper my-pop-swiper">
                             <div class="swiper-wrapper display-vertical">
                                 <div class="swiper-pop-top-slide swiper-slide">
-                                    <img src="./frontend-img/distribution-img/pop-window/sesamebun1.jpeg" />
+                                    <img src="./frontend-img/distribution-img/pop-window/sesamebun1.jpeg" alt="產品圖片1"/>
                                 </div>
                                 <div class="swiper-slide swiper-pop-top-slide">
-                                    <img src="./frontend-img/distribution-img/pop-window/sesamebun2.jpeg" />
+                                    <img src="./frontend-img/distribution-img/pop-window/sesamebun2.jpeg" alt="產品圖片2"/>
                                 </div>
                                 <div class="swiper-slide swiper-pop-top-slide">
-                                    <img src="./frontend-img/distribution-img/pop-window/sesamebun3.jpeg" />
+                                    <img src="./frontend-img/distribution-img/pop-window/sesamebun3.jpeg" alt="產品圖片3"/>
                                 </div>
                                 <div class="swiper-slide swiper-pop-top-slide">
-                                    <img src="./frontend-img/distribution-img/pop-window/sesamebun4.jpeg" />
+                                    <img src="./frontend-img/distribution-img/pop-window/sesamebun4.jpeg" alt="產品圖片4"/>
                                 </div>
                             </div>
                         </div>
@@ -716,37 +716,37 @@
                                 <div class="swiper-slide swiper-pop-top-slide">
                                     <div class="pop-sub-border-img">
                                         <img class="sub-img"
-                                            src="./frontend-img/distribution-img/pop-window/sesamebun1.jpeg" />
+                                            src="./frontend-img/distribution-img/pop-window/sesamebun1.jpeg" alt="產品圖片1"/>
                                     </div>
                                 </div>
                                 <div class="swiper-slide swiper-pop-top-slide">
                                     <div class="pop-sub-border-img">
                                         <img class="sub-img"
-                                            src="./frontend-img/distribution-img/pop-window/sesamebun2.jpeg" />
+                                            src="./frontend-img/distribution-img/pop-window/sesamebun2.jpeg" alt="產品圖片2"/>
                                     </div>
                                 </div>
                                 <div class="swiper-slide swiper-pop-top-slide">
                                     <div class="pop-sub-border-img">
                                         <img class="sub-img"
-                                            src="./frontend-img/distribution-img/pop-window/sesamebun3.jpeg" />
+                                            src="./frontend-img/distribution-img/pop-window/sesamebun3.jpeg" alt="產品圖片3"/>
                                     </div>
                                 </div>
                                 <div class="swiper-slide swiper-pop-top-slide">
                                     <div class="pop-sub-border-img">
                                         <img class="sub-img"
-                                            src="./frontend-img/distribution-img/pop-window/sesamebun4.jpeg" />
+                                            src="./frontend-img/distribution-img/pop-window/sesamebun4.jpeg" alt="產品圖片4"/>
                                     </div>
                                 </div>
                             </div>
                             <div class="swiper-button-next">
                                 <img class="next-prev-img"
                                     src="./frontend-img/distribution-img/pop-window/commodity-next.svg"
-                                    alt="">
+                                    alt="下一個圖片">
                             </div>
                             <div class="swiper-button-prev">
                                 <img class="next-prev-img"
                                     src="./frontend-img/distribution-img/pop-window/commodity-prev.svg"
-                                    alt="">
+                                    alt="上一個圖片">
                             </div>
                             <div class="swiper-pagination swiper-page-dec"></div>
                         </div>
@@ -832,15 +832,15 @@
                                             <div class="img-box-border-img">
                                                 <img class="product-img"
                                                     src="./frontend-img/distribution-img/pop-window/1668998205a2557a7b2e94197ff767970b67041697.jpg"
-                                                    alt="">
+                                                    alt="商品圖片">
                                                 <img class="ask-icon"
                                                     src="./frontend-img/distribution-img/pop-window/add_for_ask.svg"
-                                                    alt="">
+                                                    alt="加入購物車">
                                                 <div class="product-img-hover">
                                                     <img class="ask-icon-hover"
                                                         src="./frontend-img/distribution-img/pop-window/add_for_ask_hover.svg"
-                                                        alt="">
-                                                    <a href="" class="commodity-more-button btn">
+                                                        alt="加入購物車">
+                                                    <a href="" class="commodity-more-button btn" title="更多商品">
                                                         MORE
                                                     </a>
                                                 </div>
@@ -861,15 +861,15 @@
                                             <div class="img-box-border-img">
                                                 <img class="product-img"
                                                     src="./frontend-img/distribution-img/pop-window/165899031442a0e188f5033bc65bf8d78622277c4e.jpg"
-                                                    alt="">
+                                                    alt="商品圖片">
                                                 <img class="ask-icon"
                                                     src="./frontend-img/distribution-img/pop-window/add_for_ask.svg"
-                                                    alt="">
+                                                    alt="加入購物車">
                                                 <div class="product-img-hover">
                                                     <img class="ask-icon-hover"
                                                         src="./frontend-img/distribution-img/pop-window/add_for_ask_hover.svg"
-                                                        alt="">
-                                                    <a href="" class="commodity-more-button btn">
+                                                        alt="加入購物車">
+                                                    <a href="" class="commodity-more-button btn" title="更多商品">
                                                         MORE
                                                     </a>
                                                 </div>
@@ -890,15 +890,15 @@
                                             <div class="img-box-border-img">
                                                 <img class="product-img"
                                                     src="./frontend-img/distribution-img/pop-window/165899100742a0e188f5033bc65bf8d78622277c4e.jpg"
-                                                    alt="">
+                                                    alt="商品圖片">
                                                 <img class="ask-icon"
                                                     src="./frontend-img/distribution-img/pop-window/add_for_ask.svg"
-                                                    alt="">
+                                                    alt="加入購物車">
                                                 <div class="product-img-hover">
                                                     <img class="ask-icon-hover"
                                                         src="./frontend-img/distribution-img/pop-window/add_for_ask_hover.svg"
-                                                        alt="">
-                                                    <a href="" class="commodity-more-button btn">
+                                                        alt="加入購物車">
+                                                    <a href="" class="commodity-more-button btn" title="更多商品">
                                                         MORE
                                                     </a>
                                                 </div>
@@ -919,15 +919,15 @@
                                             <div class="img-box-border-img">
                                                 <img class="product-img"
                                                     src="./frontend-img/distribution-img/pop-window/1658908734cfecdb276f634854f3ef915e2e980c31.jpg"
-                                                    alt="">
+                                                    alt="商品圖片">
                                                 <img class="ask-icon"
                                                     src="./frontend-img/distribution-img/pop-window/add_for_ask.svg"
-                                                    alt="">
+                                                    alt="加入購物車">
                                                 <div class="product-img-hover">
                                                     <img class="ask-icon-hover"
                                                         src="./frontend-img/distribution-img/pop-window/add_for_ask_hover.svg"
-                                                        alt="">
-                                                    <a href="" class="commodity-more-button btn">
+                                                        alt="加入購物車">
+                                                    <a href="" class="commodity-more-button btn" title="更多商品">
                                                         MORE
                                                     </a>
                                                 </div>
@@ -948,15 +948,15 @@
                                             <div class="img-box-border-img">
                                                 <img class="product-img"
                                                     src="./frontend-img/distribution-img/pop-window/16589912415878a7ab84fb43402106c575658472fa.jpg"
-                                                    alt="">
+                                                    alt="商品圖片">
                                                 <img class="ask-icon"
                                                     src="./frontend-img/distribution-img/pop-window/add_for_ask.svg"
-                                                    alt="">
+                                                    alt="加入購物車">
                                                 <div class="product-img-hover">
                                                     <img class="ask-icon-hover"
                                                         src="./frontend-img/distribution-img/pop-window/add_for_ask_hover.svg"
-                                                        alt="">
-                                                    <a href="" class="commodity-more-button btn">
+                                                        alt="加入購物車">
+                                                    <a href="" class="commodity-more-button btn" title="更多商品">
                                                         MORE
                                                     </a>
                                                 </div>
@@ -977,15 +977,15 @@
                                             <div class="img-box-border-img">
                                                 <img class="product-img"
                                                     src="./frontend-img/distribution-img/pop-window/16508571967e7757b1e12abcb736ab9a754ffb617a.jpg"
-                                                    alt="">
+                                                    alt="商品圖片">
                                                 <img class="ask-icon"
                                                     src="./frontend-img/distribution-img/pop-window/add_for_ask.svg"
-                                                    alt="">
+                                                    alt="加入購物車">
                                                 <div class="product-img-hover">
                                                     <img class="ask-icon-hover"
                                                         src="./frontend-img/distribution-img/pop-window/add_for_ask_hover.svg"
-                                                        alt="">
-                                                    <a href="" class="commodity-more-button btn">
+                                                        alt="加入購物車">
+                                                    <a href="" class="commodity-more-button btn" title="更多商品">
                                                         MORE
                                                     </a>
                                                 </div>
@@ -1007,12 +1007,12 @@
                                 <div class="swiper-button-next">
                                     <img class="next-prev-img"
                                         src="./frontend-img/distribution-img/pop-window/commodity-next.svg"
-                                        alt="">
+                                        alt="下一張圖片">
                                 </div>
                                 <div class="swiper-button-prev">
                                     <img class="next-prev-img"
                                         src="./frontend-img/distribution-img/pop-window/commodity-prev.svg"
-                                        alt="">
+                                        alt="上一張圖片">
                                 </div>
                             </div>
                         </div>
