--- a/franchisee-form.html
+++ b/franchisee-form.html
@@ -264,11 +264,11 @@
                                 </div>
                                 <!----------------------------- 社群連結 ------------------------------------>
                                 <div class="social-menu-icon">
-                                    <a href="" title="老虎堂FB">
+                                    <a href="https://www.facebook.com/twtigersugar/" title="老虎堂FB">
                                         <img class="social-menu-icon-fb" src="./frontend-img/header-img/fb.png"
                                             alt="icon-fb">
                                     </a>
-                                    <a href="" title="老虎堂IG">
+                                    <a href="https://www.instagram.com/twtigersugar/" title="老虎堂IG">
                                         <img class="social-menu-icon-ig" src="./frontend-img/header-img/ig.png"
                                             alt="social-menu-icon-ig">
                                     </a>
@@ -302,7 +302,7 @@
                 <div class="form-title">加盟主資料填寫</div>
                 <div class="form-link">
                     <a
-                        href="https://docs.google.com/forms/d/e/1FAIpQLSeDtvkV21syrYQjA_i8sY6DXGPsv2jMaMrzEXa2McmbmcVchg/viewform">★
+                        href="https://docs.google.com/forms/d/e/1FAIpQLSeDtvkV21syrYQjA_i8sY6DXGPsv2jMaMrzEXa2McmbmcVchg/viewform" title="台灣加盟主專用">★
                         台灣加盟請點此 Taiwan Franchise Store ★</a>
                 </div>
             </div>
