--- a/index.html
+++ b/index.html
@@ -270,11 +270,11 @@
                                 </div>
                                 <!----------------------------- 社群連結 ------------------------------------>
                                 <div class="social-menu-icon">
-                                    <a href="" title="老虎堂FB">
+                                    <a href="https://www.facebook.com/twtigersugar/" title="老虎堂FB">
                                         <img class="social-menu-icon-fb" src="./frontend-img/header-img/fb.png"
                                             alt="icon-fb">
                                     </a>
-                                    <a href="" title="老虎堂IG">
+                                    <a href="https://www.instagram.com/twtigersugar/" title="老虎堂IG">
                                         <img class="social-menu-icon-ig" src="./frontend-img/header-img/ig.png"
                                             alt="social-menu-icon-ig">
                                     </a>
