--- a/franchisee.html
+++ b/franchisee.html
@@ -309,7 +309,7 @@
                             <img src="./frontend-img/franchisee-img/franchisee.png" alt="加盟專區Logo">
                         </div>
                         <div class="franchisee-logo-cn-en">
-                            <div class="franchisee-logo-cn">加盟專區</div>
+                            <h1 class="franchisee-logo-cn">加盟專區</h1>
                             <div class="franchisee-logo-en">FRANCHISEE</div>
                         </div>
                     </div>
