--- a/franchisee-form.html
+++ b/franchisee-form.html
@@ -299,7 +299,7 @@
         <div class="form-container">
             <div class="form-top-container">
                 <div class="form-logo"></div>
-                <div class="form-title">加盟主資料填寫</div>
+                <h1 class="form-title">加盟主資料填寫</h1>
                 <div class="form-link">
                     <a
                         href="https://docs.google.com/forms/d/e/1FAIpQLSeDtvkV21syrYQjA_i8sY6DXGPsv2jMaMrzEXa2McmbmcVchg/viewform" title="台灣加盟主專用">★
