--- a/franchisee.html
+++ b/franchisee.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tiger Sugar 老虎堂｜虎虎生風｜黑糖專売</title>
-    <link rel="bookmark" href="./favicon.ico">
+    <link rel="bookmark" href="./frontend-img/website-title-img/favicon.ico">
 
     <!-- swiper -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css" />
